adding table template

--- a/midterm/report/FraserLukeReport.tex
+++ b/midterm/report/FraserLukeReport.tex
@@ -136,7 +136,16 @@ Fisher Classifier:
 Random slice is very similar to the method of Fisher discriminant however the projection is defined randomly. Then the problem is classified using a Gaussian classifier.
 
 \section{Results}
-
+\begin{table}
+\label{tab:regression}
+\caption{Regression DecisionTree results}
+\centering
+\begin{tabular}{|c|c|c|c|}
+ \hline
+Max Depth & Positive class error & Negative class error & Total Error \\ \hline
+6 & 7 & 8 & 8\\ \hline
+\end{tabular}
+\end{table}
 \section{Discussion}
 
 \end{document}
